5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4074/executions/1578_1329.log
== TEST (2019-03-12 11:38:07) 
-- CODE:
print(180/4=)
-- ERROR:
File "XXXX", line 1
    print(180/4=)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:38:11) 
-- CODE:
print(180/4=)
-- EXECUTION TIME:
0.133043
-- ERROR:
  File "/home/codebench/codes/1578/1329/main.py", line 1
    print(180/4=)
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:38:22) 
-- CODE:
print(180/4)
-- EXECUTION TIME:
0.10336
-- TEST CASE 1:
---- input:
xxx
---- correct output:
45.0
---- user output:
45.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
